--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark lavender-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark lavender-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
 
       <li class="bold">
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark lavender-text"><i
             class="mdi-av-my-library-books small"></i><span>Extracurriculars</span></a>
       </li>
 
@@ -113,7 +113,7 @@
         mdi-social-poll
         mdi-av-equalizer
         -->
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark lavender-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
       
@@ -121,7 +121,7 @@
         <!--
         ICONS:
         -->
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark lavender-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
 
@@ -131,7 +131,7 @@
         2. mdi-content-mail
         3. mdi-communication-email
         -->
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark lavender-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
@@ -146,10 +146,10 @@
         -->
         <!-- <a aria-label="Open Maryam's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
+          class="waves-effect waves-dark lavender-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Maryam's resume in a new tab" href="/assets/resume/MaryamYounis_Resume.pdf" target="_blank"
         
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+        class="waves-effect waves-dark lavender-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
   </nav>
@@ -159,7 +159,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="lavender-text">Varad
         Bhogayata</a><span class="black-text">Software Developer</span>
     </div>
   </nav>
@@ -168,35 +168,35 @@
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
       <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark lavender-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark lavender-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark lavender-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark lavender-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
 
       <li class="bold">
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark lavender-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark lavender-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+          class="waves-effect waves-dark lavender-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
   </nav>
@@ -210,7 +210,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Maryam Younis.</span></h2>
+              <h2>Hi, I'm <span class="lavender">Maryam Younis.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Bilingual and highly motivated University of Toronto Computer Engineering student and a UofT National Scholar, fueled by a deep passion for cybersecurity and securing cloud infrastructures. Always open to and seeking exciting opportunities to combine my technical acumen with my leadership ability and drive to help others reach their maximum potential.</h5>
@@ -252,7 +252,7 @@
 
     <!-- Second Section: About -->
     <section id="about" class="section scrollspy">
-      <h3 class="page-title white-text teal">About</h3>
+      <h3 class="page-title white-text lavender">About</h3>
       <div class="container flow-text">
         <!-- <blockquote>
           <h2>
@@ -301,7 +301,7 @@
 
     <!-- Third Section: Experience -->
     <section id="experience" class="section scrollspy">
-      <h3 class="page-title white-text teal">Experience</h3>
+      <h3 class="page-title white-text lavender">Experience</h3>
       <div class="container">
 
         <!-- Latest Experience -->
@@ -316,7 +316,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.microsoft.com/en-ca/about/default.aspx" target="_blank"
-                      class="teal-text hoverline">Microsoft</a></span>
+                      class="lavender-text hoverline">Microsoft</a></span>
                 </p>
               </div>
             </div>
@@ -351,7 +351,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://dkundur.comm.utoronto.ca/" target="_blank"
-                      class="teal-text hoverline"> Kundur Research Group</a></span>
+                      class="lavender-text hoverline"> Kundur Research Group</a></span>
                 </p>
               </div>
             </div>
@@ -387,7 +387,7 @@
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline"> UofT Cybersecurity Student Association</a></span>
+                  <span class="card-title"><a href="#experience" class="lavender-text hoverline"> UofT Cybersecurity Student Association</a></span>
                 </p>
               </div>
             </div>
@@ -420,7 +420,7 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.uoft.ewb.ca/" target="_blank"
-                      class="teal-text hoverline">EWB UofT Chapter </a></span>
+                      class="lavender-text hoverline">EWB UofT Chapter </a></span>
                 </p>
               </div>
             </div>
@@ -444,7 +444,7 @@
 
     <!-- Fourth Section: Extracurriculars -->
     <section id="projects" class="section scrollspy">
-      <h3 class="page-title white-text teal">Extracurriculars</h3>
+      <h3 class="page-title white-text lavender">Extracurriculars</h3>
       <div class="container">
         <div class="row">
 
@@ -454,7 +454,7 @@
                 <img alt="music streaming app" src="/assets/img/sporttkd.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">National Taekwondo High-Performance Coach<i
+                <span class="card-title activator lavender-text hoverline">National Taekwondo High-Performance Coach<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   Taekwondo Canada
@@ -487,7 +487,7 @@
                 <img alt="quiz app" src="/assets/img/tkd.png" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Women’s Self Defense Instructor<i
+                <span class="card-title activator lavender-text hoverline">Women’s Self Defense Instructor<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   BGC Toronto Kiwanis
@@ -522,7 +522,7 @@
                 style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Vice President of External Relations<i
+                <span class="card-title activator lavender-text hoverline">Vice President of External Relations<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   University of Toronto Taekwondo Club
@@ -531,7 +531,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title teal-text"><small>Accomplishments</small><i
+                <span class="card-title lavender-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                 </li>Managed all taekwondo classes, meetings, and inquiries within the organization for 90+ active members while
@@ -557,7 +557,7 @@
 
     <!-- Fifth Section: Skills -->
     <section id="skills" class="section scrollspy">
-      <h3 class="page-title white-text teal">Skills</h3>
+      <h3 class="page-title white-text lavender">Skills</h3>
       <div class="container">
         <!-- Languages and Databases -->
         <div class="card">
@@ -628,7 +628,7 @@
                         <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Machine Learning (Stanford)</span>
+                        <span class="card-title lavender-text">Machine Learning (Stanford)</span>
                       </div>
                     </div>
                   </div>
@@ -639,7 +639,7 @@
                         <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span>
+                        <span class="card-title lavender-text">Algorithms (Stanford)</span>
                       </div>
                     </div>
                   </div>
@@ -654,7 +654,7 @@
 
     <!-- Seventh Section: Education -->
     <section id="education" class="section scrollspy">
-      <h3 class="page-title white-text teal">Education</h3>
+      <h3 class="page-title white-text lavender">Education</h3>
       <div class="container">
         <div class="row">
           <!-- Education -->
@@ -662,7 +662,7 @@
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="teal-text hoverline">University of Toronto</a></span>
+                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="lavender-text hoverline">University of Toronto</a></span>
                 </p>
                 <p class="brown-text">Toronto, Canada</p>
                 <p>
@@ -692,7 +692,7 @@
 
     <!-- Eight Section: Contact -->
     <section id="contact" class="section scrollspy full-height">
-      <h3 class="page-title white-text teal">Contact</h3>
+      <h3 class="page-title white-text lavender">Contact</h3>
       <div class="container">
         <p>
           <a aria-label="Call Maryam" data-position="top" data-tooltip="Call Maryam"
