Activity 4: New Places Visited Section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark lavender-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
+      <li class="bold">
+        <!-- 
+        1. mdi-image-landscape
+        -->
+        <a aria-label="Navigate to the Places travelled section" href="#places-travelled" class="waves-effect waves-dark lavender-text"><i
+            class="mdi mdi-image-landscape small"></i><span>Places travelled</span></a>
+      </li>
 
       <li class="bold">
         <!--
@@ -194,8 +201,13 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+        <a aria-label="Navigate to the Places travelled section"
+          href="#places-travelled" target="_blank"
+          class="waves-effect waves-dark lavender-text"><i class="mdi-image-landscape small"></i><span>Places travelled</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Open Maryam's Resume in a new tab"
+          href="/assets/resume/MaryamYounis_Resume.pdf" target="_blank"
           class="waves-effect waves-dark lavender-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -719,6 +731,13 @@
               class="fa fa-linkedin"></i><a aria-label="Maryam on LinkedIn" href="http://linkedin.com/in/maryam-younis"
               class="hoverline" target="_blank">linkedin.com/in/maryam-younis</a></a>
         </p>
+      </div>
+    </section>
+
+    <section id="places-travelled" class="section scrollspy full-height">
+      <h3 class="page-title white-text lavender">Places travelled</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1tF2DO7K_2OpNutGRALT4S7sMfIgaOA4&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
       </div>
     </section>
   </main>
