Fix typo in Education Section

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                   <p>
                     <b>Relevant Courseworks:</b>
                   <ul>
-                    <li>Computer Securty</li>
+                    <li>Computer Security</li>
                     <li>Operating Systems</li>
                     <li>Software Engineering</li>
                     <li>Computer Networks 1 & 2</li>                        
